[package]
name = "suil-sys"
version = "0.1.0"
authors = ["gndl <gndl@users.noreply.github.com>"]
description = "Raw Bindings to the Suil library generated via rust-bindgen"
edition = "2018"
license = "MIT"
keywords = ["audio", "suil", "lv2"]
readme = "README.md"
homepage = "https://github.com/gndl/suil-sys"
repository = "https://github.com/gndl/suil-sys.git"

[build-dependencies.bindgen]
version = "0.70"

[dependencies]
lv2_raw = "0.2"
